vpc.tf
# Resource-1: Create VPC
resource "aws_vpc" "vpc-terraform" {
  cidr_block = "10.0.0.0/16"
  tags = {
    Name = "vpc-terraform"
  }
}

# Resource-2: Create Subnets
resource "aws_subnet" "vpc-terraform-subnet" {
  vpc_id                  = aws_vpc.vpc-terraform.id
  cidr_block              = "10.0.0.0/24"
  availability_zone       = "ap-southeast-2a"
  map_public_ip_on_launch = true

}

# Resource-3: Internet Gateway
resource "aws_internet_gateway" "vpc-terraform-igw" {
  vpc_id = aws_vpc.vpc-terraform.id

}

# Resource-4: Create Route Table
resource "aws_route_table" "vpc-terraform-routetable" {
  vpc_id = aws_vpc.vpc-terraform.id
}

# Resource-5: Create Route in Route Table for Internet Access
resource "aws_route" "vpc-terraform-public-route" {
  route_table_id         = aws_route_table.vpc-terraform-routetable.id
  destination_cidr_block = "0.0.0.0/0"
  gateway_id             = aws_internet_gateway.vpc-terraform-igw.id
}

# Resource-6: Associate the Route Table with the Subnet
resource "aws_route_table_association" "vpc-terraform-public-route-table-associate" {
  route_table_id = aws_route_table.vpc-terraform-routetable.id
  subnet_id      = aws_subnet.vpc-terraform-subnet.id
}

# Resource-7: Create Security Group
resource "aws_security_group" "vpc-terraform-sg" {
  name        = "vpc-terraform-default-sg"
  description = "Terraform VPC Default Security Group"
  vpc_id      = aws_vpc.vpc-terraform.id

  ingress {
    description = "Allow Port 22"
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  ingress {
    description = "Allow Port 80"
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }

  egress {
    description = "Allow all IP and Ports Outbound"
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
